--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -82,8 +82,11 @@
                     </div>
                 {% endfor %}
             </div>
-            {% include 'pagination.html' %}
         </div>
+    </div>
+    {% include 'pagination.html' %}
+    <div class="col-md-12">
+                <hr>
     </div>
     {%include 'marcas.html'%}
     {% include 'footer.html' %}
