--- a/src/templates/pagination.html
+++ b/src/templates/pagination.html
@@ -1,5 +1,10 @@
+<style>
+    {% block style %}
+
+    {% endblock style %}
+</style>
 <div class="container">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-6 col-md-offset-3 ">
         <div class="pagination paginator-center">
             {% if object_list.has_other_pages %}
                 <ul class="pagination">
