--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -5,14 +5,45 @@
 
 <style>
     {%block style%}
-        .body-contact{
-            background-image: url("../static/img/fondoeicom.jpg")!important;
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-attachment: fixed;
-            background-size: cover;
-            background-color: black;
+
+        @import url(https://fonts.googleapis.com/css?family=Josefin+Slab);
+
+        *, *:before, *:after {
+            box-sizing: inherit;
+        }
+        /** {margin:0;padding:0;border:0 none; position: relative;}*/
+        html {
+            background-image: linear-gradient(to bottom, #e6eff0 80%, #eee);
             min-height: 100%;
+            background-size: cover;
+            box-sizing: border-box;
+            font-family: Josefin Slab, sans serif;
+        }
+        body {
+            height: inherit;
+        }
+        article {
+            height: 100vh;
+            -margin-bottom: 5vh;
+            display: flex;
+            align-items: center;
+            background-size: cover;
+            background-position: center;
+        }
+        h1 {
+            background: rgba(0,0,0,.4);
+            color: #fff;
+            font-size: 4vw;
+            font-weight: 100;
+            text-align: center;
+            width: 100%;
+            line-height: 1.3;
+        }
+
+        .dos {
+            background-image: url("../static/img/contactanos.jpg");
+            height: 250px;
+            width:100%;
         }
         .text-about-center {
             text-align: center;
@@ -52,15 +83,17 @@
             -webkit-box-shadow: none;
             box-shadow: none;
         }
+
     {%endblock%}
 </style>
-<body class="body-contact">
+<body>
+    <article class='dos'>
+      <h1>¡CONTÁCTANOS!</h1>
+    </article>
+    <br>
     <div class="container">
         <div class="row">
             <div class="col md-12">
-                <div class="page-header text-about-center">
-                    <h1>CONTÁCTANOS</h1>
-                </div>
                 <div class="col-md-6 text-about-center">
                     <div class="page-header">
                         <h3><i class="fa fa-address-book-o" aria-hidden="true"></i> INFORMACIÓN DE CONTACTO: </h3>
